
   - implemented Compress::Bzip2 1.03 compatibility layer to encompass
     the post-1.00 development thread taken by Marco Carnut and David
     Robins.  Made an effort to include the three .t test files asis.

   - Why?  Cause I found that PerlIO::via::Bzip2, by Arjen Laarhoven,
     is built on the streaming interface of 1.03.  From looking over
     it, I gather it redirects a 1.03 compression/decompression stream
     to/from a file.  It doesn't do the extra bit of fiddling with the
     trailers to make the resultant file usable by the bzip2 commands.
     Additionally, the 1.03 decompress stream doesn't handle the pause
     when an embedded EOF marker is found, which is an issue for files
     larger than the buffer size (900k by default).
     
     So, I figured it would be easy to provide a compatibility layer
     for packages that use 1.03.  By using my stuff, the headers and
     trailers would be automatically taken care of, as would the EOF
     marker.  Something like PerlIO::via::Bzip2 would then
     interoperate with bzip2 commands.  Sure, I think bzread and bzwrite
     are better choices for file IO, but this is perl, right?  There has
     to be at least 10 ways to do the same thing.

2.08 Wed May 11 2005
   - Sisyphus got the win32 nmake problem licked.  merging his stuff in.

   - perldoc changes for bzip2 1.03 compatibility.

   - got ownership of the module on cpan

2.09 Tue Aug 9 2005
   - change email addy

   - patch for test 041-error.t, thanks to Dave Evans

   - prototype error for bzwrite, limit variable was not optional, thanks
     to Christian Drauch for pointing this out.

2.10 2013-03-25 rurban
   - [cpan #82308] make breaks on 5.17.7 by schubiger
   - [cpan #21961] update ppport.h
   - [cpan #25002] memBzip() ignores level
     keep using default 6, but honor optional level argument
   - use -std=c89 on gcc compat compilers
   - fix -Wimplicit-int warning for show_bzversion main()
   - [cpan #82576] fix pod formatting errors