@@ -112,3 +112,5 @@ in a lot of places.
    - use -std=c89 on gcc compat compilers
    - fix -Wimplicit-int warning for show_bzversion main()
    - [cpan #82576] fix pod formatting errors
+   - [cpan #48128] support memBunzip BZh header w/o extra size prefix
+     and grow dest buf dynamically. Tests in t/040-memory.t
